--- a/journal/201810.md
+++ b/journal/201810.md
@@ -173,6 +173,10 @@ Decred was a platinum sponsor at the Texas Bitcoin Conference in Austin on Oct 2
 
 Much of the remainder of the month focused on vetting PR firms and facilitating proposals on Politeia, which will soon be detailed further in a blog by @Dustorf. Now that a PR firm has been approved (early Nov), work will begin to gain consensus within the community on messaging, and plans will begin on significant website updates and an integrated communications plan for 2019. Much more to share in November.
 
+@zubairzia0 has taken on the LinkedIn page:
+
+> the Decred page was there for a while but it was low in activity. I am currently helping on LinkedIn to increase presence on that platform as there is potential to attract professionals and firms that can become productive stakeholders. The Politeia page is a showcase page (like an extention page for spotlighting a part of the business), that started in Oct. Also I have made a [GitHub repository](https://github.com/zubairzia0/Decred-research/tree/master/Linkedin) for LinkedIn where we can collaborate on plans and activities, also I will store the analytics export there monthly. LinkedIn Learning is also on the radar where Decred courses can be offered (currently has Etheruem and Bitcoin courses). Recent stats for Decred page are 593 page views (+90%) and 276 unique visitors (+51%), and for Politeia page 78 page views and 16 unique visitors.
+
 Targeted advertising report for October was posted by @timhebel. Politeia campaign is planned soon using some of the new graphics. Read more [here](https://www.reddit.com/r/decred/comments/9vb5tk/october_2018_targeted_ads_reports/).
 
 ## Events
@@ -267,8 +271,7 @@ Community stats:
 * Slack users 6,271 (+122)
 * YouTube subscribers 3,726 (+8)
 * Facebook 3,085 (+25) followers and 2,849 (+23) likes
-* LinkedIn 412 (+37) followers, 593 page views (+90%), 276 unique visitors (+51%)
-* LinkedIn Politeia (new showcase page) 13 followers, 78 page views, 16 unique visitors
+* LinkedIn 412 (+37) followers, Politeia page 13 followers
 * GitHub 430 (+11) stars and 1,118 (+45) forks of dcrd repository
 
 Comm systems news:
