--- a/journal/201810.md
+++ b/journal/201810.md
@@ -195,6 +195,7 @@ Attended:
 Upcoming:
 
 * [Web Summit](https://websummit.com/) in Lisbon, Portugal on Nov 5-8.
+* [PDX Blockchain Summit & Hackathon](https://pdxblockchainsummit.org) in Portland, USA on Nov 11. Raedah Group will present on Decred and Decentralized Governance.
 * [Blockmaster](https://www.blockmaster.com.br/eventos/forum-blockmaster-2018-sao-paulo/) in Sao Palo, Brazil on Nov 13. @Rhama will talk about Decred and Politeia.
 * [BlockchainFiesta](http://blockchainfiesta.io/) in Krakow, Poland on Nov 16.
 
