Streamline comm stats

--- a/journal/201810.md
+++ b/journal/201810.md
@@ -266,14 +266,14 @@ Audio:
 
 Community stats:
 
-* Twitter followers 41,602 (+1,818)
-* Reddit subscribers 8,984 (+200)
-* Matrix users 193 (+6)
-* Slack users 6,271 (+122)
-* YouTube subscribers 3,726 (+8)
-* Facebook 3,085 (+25) followers and 2,849 (+23) likes
-* LinkedIn 412 (+37) followers, Politeia page 13 followers
-* GitHub 430 (+11) stars and 1,118 (+45) forks of dcrd repository
+* Twitter followers: 41,602 (+1,818)
+* Reddit subscribers: 8,984 (+200)
+* Matrix users: 193 (+6)
+* Slack users: 6,271 (+122)
+* YouTube subscribers: 3,726 (+8)
+* Facebook followers: 3,085 (+25), likes: 2,849 (+23)
+* LinkedIn followers: 412 (+37), Politeia page followers: 13
+* GitHub dcrd stars: 430 (+11), forks: 1,118 (+45)
 
 Comm systems news:
 
