--- a/journal/201810.md
+++ b/journal/201810.md
@@ -330,4 +330,4 @@ Feedback is appreciated: please comment on [Reddit]({}), [GitHub](https://github
 
 Contributions are also welcome: some areas are adding content, pre-release review or translations to other languages.
 
-Credits (Slack names, alphabetical order): {}, {} and {}.
+Credits (alphabetical order): bee, davecgh, degeri, Haon, jholdstock, oregonisaac, raedah, richardred and zubairzia0. Special thanks to DZ and kozel for translations.
