--- a/journal/201810.md
+++ b/journal/201810.md
@@ -320,6 +320,12 @@ Exchange news: Poloniex [removes](https://poloniex.com/press-releases/2018.10.03
 
 When shipping some MacBooks, Apple [forgot to disable](https://www.zdnet.com/article/some-apple-laptops-shipped-with-intel-chips-in-manufacturing-mode/) "Manufacturing Mode" of Intel ME. This is all pure accident and not a backdoor intent. Make sure your coins are safe.
 
+## Questions to Readers
+
+Which parts of the Journal do you find most and least useful? Which deserve more or less effort? Is it getting too large?
+
+Please let us know in the [comments]({}) as we are looking to optimize efforts.
+
 ## About This Issue
 
 This is the 7th issue of Decred Journal. It is mirrored on [GitHub]({}) and [Reddit]({}). Past issues are available [here](https://xaur.github.io/decred-news/).
