--- a/journal/201810.md
+++ b/journal/201810.md
@@ -332,8 +332,6 @@ This is the 7th issue of Decred Journal. It is mirrored on [GitHub]({}) and [Red
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
-Feedback is appreciated: please comment on [Reddit]({}), [GitHub](https://github.com/xaur/decred-news/issues) or #writers_room on [Matrix](https://riot.im/app/#/room/!lbzTjhzNbIaDbuAxkS:decred.org) or [Slack](https://decred.slack.com/messages/C9HC2NVTM/).
-
-Contributions are also welcome: some areas are adding content, pre-release review or translations to other languages.
+Your feedback and contributions are welcome on [Reddit]({}), [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://riot.im/app/#/room/!lbzTjhzNbIaDbuAxkS:decred.org).
 
 Credits (alphabetical order): bee, davecgh, degeri, Haon, jholdstock, oregonisaac, raedah, richardred and zubairzia0. Special thanks to DZ and kozel for translations.
