--- a/journal/201810.md
+++ b/journal/201810.md
@@ -63,52 +63,55 @@ Another warm welcome to new people contributing for the first time: [SergeyMikhl
 
 ## Governance
 
-We had a total of 7 proposals on Politeia in October.
+We had a total of 7 proposals on Politeia in October. The statuses as of Nov 9 to avoid confusion.
 
-1. @richardred put forth a proposal on October 16, 2018 titled ["Decred Open Source Research"](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) it aims to seek funding for open source research and will involve multiple contributors. He is currently requesting for 10,000 USD as an initial budget for a few months.
+1. [Decred Open Source Research](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) submitted by @richardred on Oct 16.
 
-   Current Status: Proposal voting active
+   It aims to seek funding for open source research and will involve multiple contributors. $10,000 is requested as an initial budget for a few months.
 
-2. @richardred opened a proposal titled ["Change language: PoS Mining to PoS Voting, Stakepool to Voting Service Provider"](https://proposals.decred.org/proposals/522652954ea7998f3fca95b9c4ca8907820eb785877dcf7fba92307131818c75). The proposal asks that changes be made to some common terminology related to Decred's Proof of Stake Voting.
+   Status: Approved. Voting finished on Nov 5 with 90.2% Yes votes.
 
-   Current Status: Proposal voting active
+2. [Change language: PoS Mining to PoS Voting, Stakepool to Voting Service Provider](https://proposals.decred.org/proposals/522652954ea7998f3fca95b9c4ca8907820eb785877dcf7fba92307131818c75) submitted by @richardred on Oct 19.
 
-3. @jy-p submitted a proposal titled ["Decred Contractor Clearance Process"](https://proposals.decred.org/proposals/fa38a3593d9a3f6cb2478a24c25114f5097c572f6dadf24c78bb521ed10992a4). The proposal goes into detail on a method to handle adding new contractors, removal of contractors, contractor disputes and resolution. He suggested that it be based on existing contractors vouching for new contractors in their domain making decisions among the people who work in a given domain. Where that fails a dispute can be escalated to a contractor vote, wherein contractors would vote weighted by the number of hours they have billed in a given period of time. A Stakeholder vote would be a last resort to resolve a dispute. The estimated project cost is USD 25,000, for work on a system for tracking contractors within domains and who has vouched for who.
+   The proposal asks that changes be made to some common terminology related to Decred's Proof of Stake system.
 
-   Current Status: Author has not yet authorized the start of voting
+   Status: Approved. Voting finished on Nov 5 with 94.1% Yes votes.
 
-4. A user "hashfunction8" submitted a proposal named ["Testing of the funding-request mechanism by a non expert"](https://proposals.decred.org/proposals/3575a65bbc3616c939acf6edf801e1168485dc864efef910034268f695351b5d) in which the user asked for 0.1 DCR to reimburse their proposal fee, in exchange they would document how to use the proposal submission form.
+3. [Decred Contractor Clearance Process](https://proposals.decred.org/proposals/fa38a3593d9a3f6cb2478a24c25114f5097c572f6dadf24c78bb521ed10992a4) submitted by @jy-p on Oct 19.
 
-   Current Status: Author has not yet authorized the start of voting
+   The proposal goes into detail on a method to handle adding new contractors, removal of contractors, contractor disputes and resolution. @jy-p suggested that it be based on existing contractors vouching for new contractors in their domain making decisions among the people who work in a given domain. Where that fails a dispute can be escalated to a contractor vote, wherein contractors would vote weighted by the number of hours they have billed in a given period of time. A Stakeholder vote would be a last resort to resolve a dispute. The estimated project cost is $25,000, for work on a system for tracking contractors within domains and who has vouched for who.
 
-We had two professional PR companies submit proposals for to provide communications services for Decred, both proposals had multiple revisions based on community feedback. 
+   Status: Author has not yet authorized the voting.
 
-5. ["Ditto Communications Proposal for Decred"](https://proposals.decred.org/proposals/27f87171d98b7923a1bd2bee6affed929fa2d2a6e178b5c80a9971a92a5c7f50) by ["Ditto Communications"](https://www.dittopr.co/)
+4. [Testing of the funding-request mechanism by a non expert](https://proposals.decred.org/proposals/3575a65bbc3616c939acf6edf801e1168485dc864efef910034268f695351b5d) submitted by hashfunction8 on Oct 20
 
-   {Details}: Duration-Six Months; 30 days out-clause; $25,000 in DCR.
+   Author is asking for 0.1 DCR to reimburse their proposal fee, in exchange they would document how to use the proposal submission form.
 
-   Current Status: Proposal voting active
+   Status: Author has not yet authorized the voting.
 
-6. ["Wachsman Communications Proposal for Decred"](https://proposals.decred.org/proposals/bc8776180b5ea8f5d19e7d08e9fcc35f0d1e3d16974963e3e5ded65139e7b092) ["Wachsman Communications"](https://wachsman.com/)
+Two professional PR companies submitted proposals to provide communications services for Decred, both proposals had multiple revisions based on community feedback.
 
-   {Details}: Duration-Six Months; 30 days out-clause; $20,000 in DCR.
+5. [Wachsman Communications Proposal for Decred](https://proposals.decred.org/proposals/bc8776180b5ea8f5d19e7d08e9fcc35f0d1e3d16974963e3e5ded65139e7b092) submitted by tomcurranlevett on Oct 19.
 
-   Current Status: Proposal voting active
+   Proposal for a range of professional communications support services from [Wachsman](https://wachsman.com/), $20,000/month for 6 months with 30-day out clause.
 
-7. A cryptocurrency exchange Easyrabbit opened a proposal ["Premium Listing for Decred on Easyrabbit "](https://proposals.decred.org/proposals/34707d34b09c3ebcf0d4aa604e8a08244e8f0f082c0af3f33d85778c93c81434) the proposal asks for 30 DCR for decred to become "Premium Listed" in their exchange. This would have benefits like "featured section", "social media promotions", "reduced fees and offers", "widget integration".
+   Status: Rejected. Voting finished on Nov 5 with 27.6% Yes votes.
 
-   Current Status: Author has not yet authorized the start of voting
+6. [Ditto Communications Proposal for Decred](https://proposals.decred.org/proposals/27f87171d98b7923a1bd2bee6affed929fa2d2a6e178b5c80a9971a92a5c7f50) submitted by blainr on Oct 22.
+
+   Proposal for a range of professional communications support services from [Ditto](https://www.dittopr.co/), $25,000/month for 6 months with 30-day out clause.
+
+   Status: Approved. Voting finished on Nov 5 with 62.3% Yes votes.
+
+7. [Premium Listing for Decred on Easyrabbit](https://proposals.decred.org/proposals/34707d34b09c3ebcf0d4aa604e8a08244e8f0f082c0af3f33d85778c93c81434) submitted by easyrabbit on Oct 30.
+
+   Easyrabbit has already listed DCR and is offering a "premium listing" for 30 DCR - with promotions like no/low trading fees and feature placement on the site and in social media.
+
+   Status: Author has not yet authorized the voting.
 
 A draft of bug bounty proposal was posted [on Reddit](https://www.reddit.com/r/decred/comments/9sri0b/bug_bounty_politeia_funding_proposal/) for discussion.
 
-For a more detailed report on the submitted proposals and related activity each week, check out @richardred's Politeia Digest.
-
-* https://www.reddit.com/r/decred/comments/9qnye8/politeia_digest_issue_1_a_short_weekly_update_on/
-* https://www.reddit.com/r/decred/comments/9sruhn/politeia_digest_2_oct_2330th_2018/
-
-{recaps Politeia activity for the month: new proposals, version changes, vote state changes, comment overview (sentiment), vote results, likely upcoming proposals}
-
-{follow up on larger proposals, completed milestones, payments}
+The montly format of Decred Journal is not well suited for timely getting informed about proposal activity on Politeia. To address this need, @richardred started weekly [Politeia Digest](https://github.com/RichardRed0x/politeia-digest). It covers all proposals that were added or changed within a week, and provides some analysis. [Issue 1](https://www.reddit.com/r/decred/comments/9qnye8/politeia_digest_issue_1_a_short_weekly_update_on/) and [Issue 2](https://www.reddit.com/r/decred/comments/9sruhn/politeia_digest_2_oct_2330th_2018/) were posted on Reddit, Medium and GitHub.
 
 ## Network
 
